updated docs, created meta classes and updated endpoints
